# NeuronLearning

./: Backprop.h  CMakeLists.txt  Error.h  Learning.cpp  Learning.h  Makefile  Makefile_learn_mnist  Makefile_learn_mnist_test  Mnist_db.h  Numder.h  README.md  Rnd.h  Shape.h  Structure.h  Structure.hpp  Update.h  dataset_test.cpp  learn_mnist.cc  learn_mnist.cpp  learn_mnist_test.cc  mnist.hpp  test_bpadd.cc  test_bpnumeric.cpp  test_imagelayer.cc  test_mnist.cc  test_shape.cpp
Datasets/: dataset.hpp  stl_10.hpp
Documentation/: NotesOnAI.tex  actfunc.nb  actfunc1.nb  distrib.nb  documentation.tex
ENNN/: ennn  netw01.ntw  supervised_version.cpp
LearnMnist/: CMakeLists.txt  learn_mnist.cpp  learn_mnist_CN.cpp  learn_mnist_CN_test.cpp  learn_mnist_test.cpp
LearnZero/: CMakeLists.txt  learn_BN.cpp  learn_BN_test.cpp  learn_zero.cpp  learn_zero_3.cpp  random_init.cpp  random_init_pics.cpp
Tests/: CMakeLists.txt  dataset_test.cpp  test_bpadd.cpp  test_bpnumeric.cpp  test_dropout.cpp  test_functional.cpp  test_imagelayer.cpp  test_netscript.cpp  test_rnd.cpp  test_shape.cpp  test_structure.cpp
include/: Backprop.hpp  Error.hpp  Functional.hpp  ImageLayer.hpp  Learning.hpp  Ntwscript.hpp  Numder.hpp  Rnd.hpp  Shape.hpp  Structure.hpp  Structure_old.hpp  Update.hpp  cifar_10.hpp  cmake_variables.hpp  cmake_variables.hpp.in  dataset.hpp  disp_img.hpp  mnist.hpp  stl_10.hpp
